--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,7 +7,7 @@
   <title>React Boilerplate</title>
 </head>
 <body>
-  <div id="root">React Boilerplate</div>
+  <div id="root">You need to have JavaScript to properly view this site</div>
   <script src="/main.js"></script>
 </body>
 </html>
