--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>React Boilerplate</title>
+  <title>Furry Con Finder</title>
 </head>
 <body>
   <div id="root">You need to have JavaScript to properly view this site</div>
