--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Furry Con Finder</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+  <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 <body>
   <div id="root">You need to have JavaScript to properly view this site</div>
